Add ML-Agents Training Environment Setup Guide and checkpoint system
- Created a new markdown file for ML-Agents training setup instructions.
- Documented the process for creating waypoints and boundary walls in Unity.
- Included configuration settings for checkpoints and boundaries.
- Provided troubleshooting tips and recommended training settings.
- Added detailed descriptions for waypoint behavior and boundary types.

--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.coplaydev.unity-mcp": "https://github.com/CoplayDev/unity-mcp.git?path=/MCPForUnity",
+    "com.unity.ml-agents": "https://github.com/Unity-Technologies/ml-agents.git?path=com.unity.ml-agents",
     "com.unity.ai.navigation": "2.0.9",
     "com.unity.collab-proxy": "2.10.0",
     "com.unity.ide.rider": "3.0.38",
