Add AutoTagChildren script and tagging functionality
- Implemented AutoTagChildren script to automatically tag GameObject children as 'Reward' or 'Boundary' based on naming conventions.
- Created TAGGING_README.md for usage instructions and notes.
- Added materials for Boundary and Checkpoint, including their respective meta files.
- Introduced WallVisibilityController script to manage visibility of wall objects in the scene.
- Updated training pipeline documentation for ML-Agents, detailing setup and training processes.
- Added requirements.txt for Python dependencies and a PowerShell script for training automation.

--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,25 @@ Assets/Scenes/Main.meta
 UserSettings/
 .vsconfig
 ProjectSettings/boot.config
+
+# Python virtualenv
+mlagents_venv/
+venv/
+.env/
+.Python
+
+# Python caches
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Results and models
+results/
+models/
+
+# VS Code
+.vscode/
+
+# OS files
+Thumbs.db
+.DS_Store
