--- a/Assets/DroneAgent.yaml
+++ b/Assets/DroneAgent.yaml
@@ -2,16 +2,17 @@ behaviors:
   DroneAgent:
     trainer_type: ppo
     hyperparameters:
-      batch_size: 1024
-      buffer_size: 10240
-      learning_rate: 3.0e-4
+      batch_size: 2048
+      buffer_size: 20480
+      learning_rate: 8.0e-4
       beta: 5.0e-4
-      epsilon: 0.2
-      lambd: 0.99
+      epsilon: 0.15
+      lambd: 0.95
       num_epoch: 3
       learning_rate_schedule: linear
+      beta_schedule: linear
     network_settings:
-      normalize: false
+      normalize: true
       hidden_units: 256
       num_layers: 2
       vis_encode_type: simple
@@ -19,6 +20,8 @@ behaviors:
       extrinsic:
         gamma: 0.99
         strength: 1.0
-    max_steps: 500000
-    time_horizon: 64
+    max_steps: 3000000
+    time_horizon: 128
     summary_freq: 10000
+    keep_checkpoints: 50
+    checkpoint_interval: 50000
