--- a/Assets/DroneAgent_Imitation.yaml
+++ b/Assets/DroneAgent_Imitation.yaml
@@ -1,4 +1,4 @@
-# Imitation Learning (GAIL) Configuration for DroneAgent
+# Imitation Learning (Behavioral Cloning) Configuration for DroneAgent
 # Use this for the first phase: learning from human demonstrations
 
 behaviors:
@@ -6,8 +6,8 @@ behaviors:
     trainer_type: ppo
     
     hyperparameters:
-      batch_size: 512
-      buffer_size: 5120
+      batch_size: 1024
+      buffer_size: 10240
       learning_rate: 3.0e-4
       beta: 5.0e-3
       epsilon: 0.2
@@ -16,25 +16,28 @@ behaviors:
       learning_rate_schedule: linear
     
     network_settings:
-      normalize: false
+      normalize: true
       hidden_units: 256
       num_layers: 2
       vis_encode_type: simple
     
-    # GAIL settings for imitation learning
+    # Behavioral Cloning - simpler and more stable than GAIL
+    behavioral_cloning:
+      demo_path: Assets/RECORDING/REC.demo
+      steps: 100000
+      strength: 0.5
+      batch_size: 512
+      num_epoch: 3
+      samples_per_update: 0
+    
+    # Extrinsic reward for waypoint collection
     reward_signals:
-      gail:
+      extrinsic:
         strength: 1.0
         gamma: 0.99
-        encoding_size: 128
-        demo_path: demonstrations/DroneAgent_demos.demo
-        learning_rate: 3.0e-4
-      
-      # Reduce extrinsic reward during imitation phase
-      extrinsic:
-        strength: 0.01
-        gamma: 0.99
     
-    max_steps: 200000
-    time_horizon: 64
-    summary_freq: 5000
+    max_steps: 500000
+    time_horizon: 128
+    summary_freq: 10000
+    keep_checkpoints: 20
+    checkpoint_interval: 25000
