--- a/Assets/DroneAgent.yaml
+++ b/Assets/DroneAgent.yaml
@@ -1,27 +1,34 @@
+# Simple PPO configuration for DroneAgent
+# Start with conservative hyperparameters for stable, accurate learning
+# Increase complexity only after this works well
+
 behaviors:
   DroneAgent:
     trainer_type: ppo
+    
     hyperparameters:
-      batch_size: 2048
-      buffer_size: 20480
-      learning_rate: 8.0e-4
-      beta: 5.0e-4
-      epsilon: 0.15
-      lambd: 0.95
-      num_epoch: 3
+      batch_size: 1024          # Smaller batches for faster feedback
+      buffer_size: 10240        # 10x batch_size
+      learning_rate: 3.0e-4     # Conservative learning rate
+      beta: 5.0e-3              # Entropy bonus (encourage exploration)
+      epsilon: 0.2              # PPO clip range
+      lambd: 0.95               # GAE lambda
+      num_epoch: 3              # Epochs per update
       learning_rate_schedule: linear
-      beta_schedule: linear
+    
     network_settings:
-      normalize: true
-      hidden_units: 256
-      num_layers: 2
+      normalize: true           # Normalize observations
+      hidden_units: 128         # Simpler network (was 256)
+      num_layers: 2             # 2 hidden layers
       vis_encode_type: simple
+    
     reward_signals:
       extrinsic:
-        gamma: 0.99
+        gamma: 0.99             # Discount factor
         strength: 1.0
-    max_steps: 3000000
-    time_horizon: 128
-    summary_freq: 10000
-    keep_checkpoints: 50
-    checkpoint_interval: 50000
+    
+    max_steps: 1000000          # 1M steps (shorter for first test)
+    time_horizon: 128           # Episode chunk size
+    summary_freq: 5000          # TensorBoard updates every 5K steps
+    keep_checkpoints: 10        # Keep 10 checkpoints
+    checkpoint_interval: 50000  # Save every 50K steps
