Enhance DroneAgent: Add roll input handling and observations for improved control

--- a/Assets/DroneAgent.yaml
+++ b/Assets/DroneAgent.yaml
@@ -24,6 +24,7 @@ behaviors:
         strength: 1.0
 
     behavioral_cloning:
+      # NOTE: Re-record demo with roll inputs and update path if using BC with roll
       demo_path: Assets/RECORDING/rendpitch.demo
       strength: 0.5          # how strongly agent imitates
       steps: 200000          # BC fades after this
