--- a/Assets/MCP/unity_mcp_config.json
+++ b/Assets/MCP/unity_mcp_config.json
@@ -2,7 +2,7 @@
   "name": "Unity ML-Agents MCP Server",
   "version": "1.0.0",
   "description": "MCP server for monitoring and controlling Unity ML-Agents drone training",
-  "pythonExecutable": "C:\\Users\\Om\\AppData\\Local\\Programs\\Python\\Python310\\python.exe",
+  "pythonExecutable": "C:\\Users\\Om\\Documents\\ws\\Fixed-wing-drone-simulator\\.venv\\Scripts\\python.exe",
   "projectRoot": "C:\\Users\\Om\\Documents\\ws\\Fixed-wing-drone-simulator",
   "autoStart": true,
   "port": 8080,
