--- a/Assets/DroneAgent.yaml
+++ b/Assets/DroneAgent.yaml
@@ -3,8 +3,8 @@ behaviors:
     trainer_type: ppo
 
     hyperparameters:
-      batch_size: 1024
-      buffer_size: 10240
+      batch_size: 1048
+      buffer_size: 10480
       learning_rate: 3.0e-4
       beta: 5.0e-3
       epsilon: 0.2
@@ -14,8 +14,8 @@ behaviors:
 
     network_settings:
       normalize: true
-      hidden_units: 128
-      num_layers: 2
+      hidden_units: 256
+      num_layers: 3
       vis_encode_type: simple
 
     reward_signals:
@@ -24,11 +24,12 @@ behaviors:
         strength: 1.0
 
     behavioral_cloning:
-      demo_path: Assets/RECORDING/allmove_2.demo
+      demo_path: Assets/RECORDING/final.demo
       strength: 0.5
-      steps: 500000
+      steps: 1000000
 
-    max_steps: 10000000
-    time_horizon: 128
-    summary_freq: 5000
+    max_steps: 100000000
+    time_horizon: 256
+    summary_freq: 10000
     keep_checkpoints: 10
+    checkpoint_interval: 500000
